--- a/app/scss/_nightClub.scss
+++ b/app/scss/_nightClub.scss
@@ -3,14 +3,16 @@
     // .nightClub__image-club
 
     &__image-club {
-        width: 100%;
+        max-width: 100%;
+        object-fit: cover;
         color: $bg-color;
     }
 
     // .nightClub__image-grnd
 
     &__image-grnd {
-        width: 80%;
+        max-width: 80%;
+        object-fit: cover;
         position: absolute;
         top: 50%;
         left: 50%;
