--- a/app/scss/_offer.scss
+++ b/app/scss/_offer.scss
@@ -6,10 +6,7 @@
         display: flex;
         justify-content: space-between;
         flex-wrap: wrap;
-        
-        //flex: 1 1 100%;
-        @media (min-width: $breakpoint-md) {
-        }
+        padding-bottom: 80px;
     }
 
     &__card-textcontent {
