--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,7 +1,8 @@
 .header {
-
-    &__head {
-    }
+    background: #000000;
+    margin-bottom: 15px;
+    /*&__head {
+    }*/
 
     &__bar {
         display: flex;
@@ -9,8 +10,8 @@
         justify-content: space-between;
     }
 
-    &__logo-link {
-    }
+    /*&__logo-link {
+    }*/
 
     &__logo {
         width: 55px;
@@ -49,11 +50,16 @@
         z-index: 10;
         bottom: 0;
         left: 50%;
-        transform: translateX(-50%);
+        transform: translate(-50%, 101%);
         width: 90%;
         text-align: center;
         background: #2a2a3b;
         padding-top: 30px;
+
+        &.active {
+            transform: translateX(-50%, );
+        }
+
         @media (min-width: $breakpoint-md) {
             position: static;
             background: none;
@@ -132,6 +138,4 @@
             color: $pink-color;
         }
     }
-}
-.container {
 }
