--- a/app/scss/_bar.scss
+++ b/app/scss/_bar.scss
@@ -144,7 +144,7 @@
     &__card {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        //justify-content: space-between;
         @media (min-width:$breakpoint-md) {
             flex-direction: row-reverse;
         }
@@ -182,7 +182,8 @@
     &__card-textcontent {
         display: flex;
         flex-direction: row-reverse;
-        flex: 1 1 30%;
+        flex: 1 1 70%;
+        justify-content: space-between;
     }
 
     &__card-textcontent-main {
@@ -190,6 +191,7 @@
         flex-direction: column;
         justify-content: space-between;
         padding-right: 50px;
+        //flex: 1 1 30%;
     }
 
     &__card-descrioption {
