--- a/app/scss/_bar.scss
+++ b/app/scss/_bar.scss
@@ -38,6 +38,9 @@
             font-size: 36px;
             padding: 9px 48px;
         }
+        &:hover {
+            background: #DE409C;
+        }
     }
 
     &__link {
