--- a/app/scss/_event.scss
+++ b/app/scss/_event.scss
@@ -227,5 +227,8 @@
             font-size: 36px;
             padding: 9px 72px;
         }
+        &:hover {
+            background: #DE409C;
+        }
     }
 }
