--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -1,17 +1,12 @@
 .header {
     background: #000000;
     margin-bottom: 15px;
-    /*&__head {
-    }*/
 
     &__bar {
         display: flex;
         align-items: center;
         justify-content: space-between;
     }
-
-    /*&__logo-link {
-    }*/
 
     &__logo {
         width: 55px;
@@ -135,6 +130,9 @@
             margin: 0;
         }
         &.active {
+            color: $pink-color;
+        }
+        &:hover {
             color: $pink-color;
         }
     }
